# email

./: Cargo.toml  Makefile  a.out  control.c  control.h  draw.c  draw.h  main.c  save.json  tc.c  tc.h  tools.c  tools.h  vimail
src/: app.rs  context.rs  control.rs  draw.rs  fileio.rs  main.rs  rss.rs  tools.rs  verrors.rs
