[package]
name = "win-vimail"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console = "0.15.8"
once_cell = "1.19.0"
serde = { version="1.0.197", features=["derive"] }
serde_json = "1.0.115"
terminal = "0.2.1"
